--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
           <!-- ----------------- feature ------------------ -->
 
           <div class="container my-5">
-               <img src="./img/sunsat.jpg" alt="IMG" class="feature-img" />
+               <img src="./img/Singlepage.jpg" alt="IMG" class="feature-img" />
           </div>
 
           <!---------------------------- main area --------------------------------->
