--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="col-md-4 mb-3">
                          <div class="card mt-4 mt-lg-0" style="width: 18rem">
                               <img
-                                   src="https://picsum.photos/200"
+                                   src="./img/[GetPaidStock.com]-65fcae53e7299.jpg"
                                    class="card-img-top"
                                    alt="card-img" />
                               <div class="card-body">
@@ -117,7 +117,7 @@
                     <div class="col-lg-4">
                          <div class="card mt-4 mt-lg-0" style="width: 18rem">
                               <img
-                                   src="https://picsum.photos/200/300"
+                                   src="./img/[GetPaidStock.com]-65fcaec4e9338.jpg"
                                    class="card-img-top"
                                    alt="card-img" />
                               <div class="card-body">
@@ -137,7 +137,7 @@
                     <div class="col-lg-4">
                          <div class="card mt-4 mt-lg-0" style="width: 18rem">
                               <img
-                                   src="https://picsum.photos/seed/picsum/200/300"
+                                   src="./img/[GetPaidStock.com]-65fcaf25b558c.jpg"
                                    class="card-img-top"
                                    alt="card-img" />
                               <div class="card-body">
@@ -337,7 +337,7 @@
                          <div class="rounded-5">
                               <img
                                    class="w-100 h-auto"
-                                   src="https://picsum.photos/id/870/200/300?grayscale&blur=2"
+                                   src="/img/download.jpg"
                                    alt="IMG" />
                               <h3 class="mt-4">Propuler Artical</h3>
                               <div class="mt-4">
