--- a/single.html
+++ b/single.html
@@ -90,7 +90,7 @@
           <!-- ----------------- feature ------------------ -->
 
           <div class="container my-5">
-               <img src="./img/sunsat.jpg" alt="IMG" class="feature-img" />
+               <img src="./img/Singlepage.jpg" alt="IMG" class="feature-img" />
           </div>
 
           <!---------------------------- main area --------------------------------->
@@ -139,9 +139,9 @@
 
                               <h2>Item one</h2>
                               <img
-                                   src="https://source.unsplash.com/user/erondu/200x200"
+                                   src="./img/shubham-dhage-R2HtYWs5-QA-unsplash.jpg"
                                    alt="Img"
-                                   class="img" />
+                                   class="w-100" />
                               <p>
                                    Lorem, ipsum dolor sit amet consectetur
                                    adipisicing elit. Nemo voluptates provident
@@ -158,9 +158,9 @@
 
                               <h2>Item 2</h2>
                               <img
-                                   src="https://source.unsplash.com/200x200/?nature,water"
+                                   src="./img/shubham-dhage-UxDU0Gg5pqQ-unsplash.jpg"
                                    alt="Img"
-                                   class="img" />
+                                   class="w-100" />
                               <p>
                                    Lorem, ipsum dolor sit amet consectetur
                                    adipisicing elit. Nemo voluptates provident
