--- a/search.html
+++ b/search.html
@@ -267,7 +267,7 @@
                          <div class="rounded-5">
                               <img
                                    class="w-100 h-auto"
-                                   src="https://picsum.photos/id/870/200/300?grayscale&blur=2"
+                                   src="./img/andre-francois-mckenzie-JrjhtBJ-pGU-unsplash.jpg"
                                    alt="IMG" />
                               <h3 class="mt-4">Propuler Artical</h3>
                               <div class="mt-4">
